language/move-lang/tests/move_check/borrows/copy_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/copy_full_invalid.move:12:17 ───
    │
 12 │         let f = &mut x;
    │                 ------ It is still being mutably borrowed by this reference
 13 │         x;
    │         ^ Invalid copy of local 'x'
    │

error: 

    ┌── tests/move_check/borrows/copy_full_invalid.move:18:17 ───
    │
 18 │         let f = id_mut(&mut x);
    │                 -------------- It is still being mutably borrowed by this reference
 19 │         x;
    │         ^ Invalid copy of local 'x'
    │

